[package]
name = "tui-slides"
version = "0.1.2"
edition = "2021"
description = "Slides presentation in terminal"
license = "Apache-2.0"
authors = ["Chleba <chlebik@gmail.com>"]
build = "build.rs"

[dependencies]
ratatui = { version = "0.28.1", features = ["serde", "macros", "unstable-widget-ref", "unstable"] }
ratatui-image = { version = "1.0.5", features = ["crossterm"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
tui-big-text = "0.6.0"
better-panic = "0.3.0"
syntect = "5.2.0"
clap = { version = "4.5.17", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
config = "0.14.0"
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "2.0.1"
color-eyre = "0.6.2"
dyn-clone = "1.0.11"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
json5 = "0.4.1"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
syntect-tui = "3.0.4"

[build-dependencies]
vergen-gix = { version = "1.0.1", features = ["build"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[build]
jobs = 4
